fix(docusaurus): mobile menu bar fixes (#930)
* Remove scrollbars from docItem column in Docusaurus

* Hide doc item paginator

* Fix logo wordmark linebreak

* Fix ROOS link in Docusaurus

* Add different button kinds to docusaurus

* Move TOC menu to left sidebar

* Properly hide toc from all pages

* Fix mobile menu bar item rendering

* Fix zindex of close button in mobile menu bar

* Add changeset for zIndex fix

* Temporarily disable Best practices in Docusaurus

* Make docusuaurus layout medium width

* Make left side of docusuaurus menu gray

* Remove menu subitem link color override

---------

--- a/components/menubar-mobile/src/index.scss
+++ b/components/menubar-mobile/src/index.scss
@@ -123,6 +123,7 @@
 
         &.rvo-topnav__item--active .rvo-topnav__link {
           padding-inline-start: var(--rvo-mobile-menu-submenu-link-active-padding-inline-start);
+          z-index: 1000;
 
           // &::before {
           //   background-color: var(--rvo-mobile-menu-item-active-indicator-background-color);
