--- a/packages/docusaurus/src/css/custom.scss
+++ b/packages/docusaurus/src/css/custom.scss
@@ -162,7 +162,6 @@ code {
   ~ .menu__list
   .theme-doc-sidebar-item-link
   .rvo-link {
-  color: var(--rvo-color-grijs-500);
   margin-inline-start: var(--rvo-space-xs);
 }
 
